# gls-assessment

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/skills/webhook-ingestion/: ARCHITECTURE.md  PATTERNS.md  SKILL.md
app/: __init__.py  config.py  db.py  hashing.py  logging.py  main.py  metrics.py  queue.py
app/adapters/: base.py  fingerprint.py  globalfreightpay_v1.py  llm_universal.py  maersk_v1.py  marine_traffic_v1.py  one_v1.py  parsers.py  registry.py  schema_discoverer.py  schema_driven.py
app/api/: receiver.py
app/domain/: canonical.py  normalizer.py  state_machine.py
app/llm/: fallback.py  openai_provider.py  provider.py  stub.py
app/llm/prompts/: v1_classify_event_type.txt  v1_classify_extract.txt
app/llm/schemas/: v1_target_schema.json
app/storage/migrations/: 001_init.sql  002_assessment_hardening.sql  003_dynamic_adapters.sql  004_operational_indexes.sql
app/tools/: migrate.py  replay.py  seed.py
app/workers/: outbox_dispatcher.py  pipeline.py  processor.py
tests/: conftest.py  test_adapters.py  test_canonical.py  test_fingerprint.py  test_hashing.py  test_hot_path_imports.py  test_llm_fallback.py  test_llm_stub.py  test_normalizer.py  test_outbox.py  test_parsers.py  test_pipeline.py  test_receiver.py  test_replay.py  test_schema_discoverer.py  test_schema_driven.py  test_state_machine.py  vendor_schemas.py
tests/fixtures/payloads/: 03_globalfreightpay_paid.json  04_globalfreightpay_issued.json  06_marine_traffic_advisory.json
